--- a/DrApp/DrApp/Views/HomePage.xaml
+++ b/DrApp/DrApp/Views/HomePage.xaml
@@ -4,28 +4,35 @@
              Shell.NavBarIsVisible="False"
              xmlns:effects="clr-namespace:DrApp.Effects"
              x:Class="DrApp.Views.HomePage">
-    <ContentPage.Content>
-        <Grid Padding="15,10">
+  <ContentPage.Content>
+    <Grid Padding="15,10">
+
       <Grid.RowDefinitions>
+        <RowDefinition Height="Auto" />
         <RowDefinition Height="Auto" />
         <RowDefinition Height="Auto" />
         <RowDefinition Height="*" />
         <RowDefinition Height="Auto" />
-        <RowDefinition Height="Auto" />
       </Grid.RowDefinitions>
 
-      <Image Source="hamburger_menu_icon.png"
-             HorizontalOptions="Start"/>
+      <ImageButton BackgroundColor="Transparent"
+                   Source="hamburger_menu_icon.png"
+                   HorizontalOptions="Start" />
+      
       <Image Source="dr_app_logo.png"
              HorizontalOptions="CenterAndExpand"
              WidthRequest="60" />
 
       <Frame Grid.Row="1"
              Style="{StaticResource EntryRoundedCornerFrame}"
-             Padding="2,0" CornerRadius="16" >
+             Padding="2,0"
+             CornerRadius="16">
+        
         <StackLayout Orientation="Horizontal">
+          
           <Image Style="{StaticResource EntryIcon}"
                  Source="search_icon.png" />
+          
           <Entry Placeholder="Search Body Region ID..."
                  FontSize="12"
                  Style="{StaticResource EntryStyle}">
@@ -33,43 +40,62 @@
               <effects:PlainEntry />
             </Entry.Effects>
           </Entry>
-          <Image Style="{StaticResource EntryIcon}"
-                 Source="filters_icon.png" />
+
+          <ImageButton BackgroundColor="Transparent"
+                       Margin="10"
+                       Source="filters_icon.png" />
         </StackLayout>
+        
       </Frame>
 
-      <AbsoluteLayout Grid.Row="2">
+      <AbsoluteLayout HorizontalOptions="Center"
+                      VerticalOptions="Center"
+                      HeightRequest="110"
+                      Grid.Row="2">
 
         <Frame BackgroundColor="{StaticResource CardBackground}"
+               x:Name="card"
                HasShadow="False"
                Padding="12,8"
                CornerRadius="5"
                AbsoluteLayout.LayoutFlags="All"
-               AbsoluteLayout.LayoutBounds="1,1,0.87,0.85">
+               AbsoluteLayout.LayoutBounds="1,1,0.89,0.85">
+          
           <Label Text="Hey there! I am your personal doctor and more like your friend who will be helping you to diagnose your medical issues..."
-                 FontSize="Caption" TextColor="Black"/>
+                 FontSize="Caption"
+                 TextColor="Black" />
         </Frame>
-        <Image Source="dr_cartoon_2.png" />
+        <Image Source="dr_cartoon_2.png"
+               AbsoluteLayout.LayoutFlags="All"
+               AbsoluteLayout.LayoutBounds="0,0,0.15,1" />
       </AbsoluteLayout>
 
-      <StackLayout Grid.Row="3">
+      <Grid Grid.Row="3"
+            VerticalOptions="Center">
+        
+        <Grid.RowDefinitions>
+          <RowDefinition Height="Auto" />
+          <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        
         <Label Text="Your Body Part (Front)"
-               Style="{StaticResource Subtitle}" 
-               TextColor="{StaticResource Primary}"/>
+               Margin="0,10"
+               Style="{StaticResource Subtitle}"
+               TextColor="{StaticResource Primary}" />
 
-        <Image Source="human_body_front.png" 
-               HeightRequest="300"
+        <Image Source="human_body_front.png"
+               Grid.Row="1"
+               VerticalOptions="Center"
                Aspect="AspectFit" />
-      </StackLayout>
+      </Grid>
 
-          
-      
-
-      <Frame Grid.Row="4" CornerRadius="10" Style="{StaticResource ButtonDropShadowFrame}">
+      <Frame Grid.Row="4"
+             CornerRadius="10"
+             Style="{StaticResource ButtonDropShadowFrame}">
         <Button Text="Back Part"
                 Style="{StaticResource MainButtonStyleSmall}" />
       </Frame>
 
     </Grid>
-    </ContentPage.Content>
+  </ContentPage.Content>
 </ContentPage>
