--- a/DrApp/DrApp/Views/InfoPage.xaml
+++ b/DrApp/DrApp/Views/InfoPage.xaml
@@ -1,12 +1,72 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             Shell.NavBarIsVisible="False"
              x:Class="DrApp.Views.InfoPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+  <ContentPage.Content>
+    <Grid Padding="15,10">
+
+      <Grid.RowDefinitions>
+        <RowDefinition Height="Auto" />
+        <RowDefinition Height="*" />
+        <RowDefinition Height="Auto" />
+      </Grid.RowDefinitions>
+
+      <ImageButton BackgroundColor="Transparent"
+                   Source="hamburger_menu_icon.png"
+                   HorizontalOptions="Start" />
+
+      <Image Source="dr_app_logo.png"
+             HorizontalOptions="CenterAndExpand"
+             WidthRequest="60" />
+
+      <Frame CornerRadius="10"
+             VerticalOptions="Center"
+             HorizontalOptions="End"
+             Style="{StaticResource ButtonDropShadowFrame}">
+        <Button Text="Back"
+                TextTransform="None"
+                Style="{StaticResource MainButtonStyleSmall}" />
+      </Frame>
+
+      <AbsoluteLayout Grid.Row="1">
+
+        <Frame BackgroundColor="{StaticResource CardBackground}"
+               HasShadow="False"
+               Padding="25,30"
+               CornerRadius="15"
+               AbsoluteLayout.LayoutFlags="All"
+               AbsoluteLayout.LayoutBounds="0,1,1,0.49">
+          <StackLayout>
+            <Frame VerticalOptions="Start"
+                   HorizontalOptions="Center"
+                   CornerRadius="10"
+                   Padding="25,10"
+                   BackgroundColor="{StaticResource InfoCardTitleBackground}">
+              <Label Text="Diarrhoea"
+                     TextColor="White"
+                     FontSize="Caption" />
+            </Frame>
+            <ScrollView>
+              <Label Text="My Buddy, Diarrhoea refers to watery stools and some other symptoms are mentioned below: &#10;&#10;&#x2022; stomach pain  &#10;&#x2022; abdominal cramps &#10;&#x2022; bloating"
+                     FontSize="Caption" />
+            </ScrollView>
+          </StackLayout>
+        </Frame>
+
+        <Image Source="dr_cartoon_1.png"
+               Aspect="AspectFit"
+               AbsoluteLayout.LayoutFlags="All"
+               AbsoluteLayout.LayoutBounds="0,0.1,1,0.55" />
+      </AbsoluteLayout>
+
+      <Frame Grid.Row="2"
+             CornerRadius="10"
+             Style="{StaticResource ButtonDropShadowFrame}">
+        <Button Text="Reset"
+                Style="{StaticResource MainButtonStyleSmall}" />
+      </Frame>
+
+    </Grid>
+  </ContentPage.Content>
 </ContentPage>
