--- a/DrApp/DrApp/Views/HomePage.xaml
+++ b/DrApp/DrApp/Views/HomePage.xaml
@@ -50,7 +50,7 @@
 
       <AbsoluteLayout HorizontalOptions="Center"
                       VerticalOptions="Center"
-                      HeightRequest="110"
+                      HeightRequest="160"
                       Grid.Row="2">
 
         <Frame BackgroundColor="{StaticResource CardBackground}"
@@ -59,9 +59,9 @@
                Padding="12,8"
                CornerRadius="5"
                AbsoluteLayout.LayoutFlags="All"
-               AbsoluteLayout.LayoutBounds="1,1,0.89,0.85">
-          
-          <Label Text="Hey there! I am your personal doctor and more like your friend who will be helping you to diagnose your medical issues..."
+               AbsoluteLayout.LayoutBounds="1,0.7,0.89,0.75">
+
+          <Label Text="Hey there! I am your personal doctor and more like your friend who will be helping you to diagnose your medical issues.&#10;&#10;So buddy the first step you will have to take is to select the body part which you are currently having issue with."
                  FontSize="Caption"
                  TextColor="Black" />
         </Frame>
